--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body {
   width: 100%;
   display: grid;
   place-items: center;
-  background-image: url("https://w0.peakpx.com/wallpaper/818/148/HD-wallpaper-whatsapp-background-cool-dark-green-new-theme-whatsapp.jpg");
+  background-image: url("https://img.freepik.com/free-vector/color-seamless-space-pattern_102902-2360.jpg?w=740&t=st=1698119734~exp=1698120334~hmac=c19922248ff81dafdcf998f0b9f99b669725ca7f176adb507b8bc8643b5db82d");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .container {
   width: 95%;
-  max-width: 300px;
-  backdrop-filter: blur(10px);
+  max-width: 400px;
+  backdrop-filter: blur(40px);
   margin: 0 auto;
   text-align: center;
   padding: 20px;
@@ -113,7 +113,7 @@ fa-twitter {
   border: 0;
 }
 .login button {
-  background-color: rgb(204, 254, 210);
+  background-color: rgb(164, 162, 250);
   color: black;
   border: 0;
 }
